# OrbitKey

./: .gitignore  .zedignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  default_profiles.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  commands.rs  email_template.html  hotkey.rs  lib.rs  main.rs  state.rs  storage.rs  window_manager.rs
src/windows/: ActionRing.tsx  ControlPanel.tsx  IconMap.ts  SettingsPanel.tsx  Theme.tsx
src/windows/SettingMenu/: AppearanceSettings.tsx  InteractionSettings.tsx  SystemDataSettings.tsx
src/windows/components/: Alert.tsx  ProTipModal.tsx  ReportBug.tsx  SliceEditor.tsx  SplashScreen.tsx  Support.tsx  UpdateModal.tsx
