[package]
name = "action-ring"
version = "0.1.0"
description = "Radial Menu / Action Ring — Tauri v2 Desktop Application"
authors = []
edition = "2021"

# See more keys: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix makes the lib name different from the bin name.
# Tauri requires both to coexist in the same crate.
name = "action_ring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                       = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell          = "2"
tauri-plugin-fs             = "2"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"

# Input simulation (keyboard shortcuts)
enigo                       = "0.2"

# Async primitives used in execute_action (spawn_blocking + time::sleep)
# Tauri v2 embeds tokio, but we need to reference it directly for these APIs.
tokio                       = { version = "1", features = ["rt", "time"] }
tauri-plugin-dialog = "2.7.0"
objc = "0.2.7"
tauri-plugin-notification = "2.3.3"

[features]
# This feature is used for production builds or when `devUrl` is not set.
# DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
