[package]
name = "action-ring"
version = "0.1.0"
description = "Radial Menu / Action Ring — Tauri v2 Desktop Application"
authors = ["ChampMo"]
edition = "2021"

[lib]
name = "action_ring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# ⚠️ ต้องมีตัวนี้เท่านั้นเพื่อให้ build.rs ทำงานได้
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri Core & Plugins
tauri-plugin-process = "2"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Email & Environment
lettre = "0.11"
dotenvy = "0.15"

# Automation & OS Integration
enigo = "0.2"
objc = "0.2.7"

# Async Runtime (รวมร่างเหลืออันเดียวและเปิด 'full' เพื่อความชัวร์)
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.23", features = ["highsierra"] }
